# prontodb

./: .rsb-compliance  .rsb-defects  ACTUAL_SYNTAX.md  ADMIN_README.md  CARD_001.yml  CARD_001_RESULT.txt  CARD_003.yml  CARD_004.yml  CARD_005.yml  CARD_006.yml  CROSS_AGENT_WORKFLOWS.md  Cargo.toml  Cargo_hub.toml  DELIMITER_COMPARISON.md  MVP_STATUS.md  PLAN.md  PRD.md  README.md  RFC_MD_INGESTION.md  ROADMAP.md  ROADMAP_XSTREAM_V7.md  SESSION.md  START.txt  TASKS.md  TASKS_STRUCTURE_REFACTOR.md  TODO.md  UAT_RESULTS.md  alice-dev.db  alice_dev.db  deploy.sh  dev_tdd_protocol.txt  semv.build  stakeholder.txt  test.sh  todo.txt
.analysis/: architectural_flaw_analysis.txt  consolidated_wisdom.txt  core_modules_architecture.txt  dependency_future_note.txt  new_architecture_design.txt  technical_debt.txt
.claude/agents/: teddy_reduced.md
.dams/: CARD_001.yml  generate_work_cards.py  zip_milestones.py
.dams/completed_cards/: CARD_002.yml  CARD_003.yml  CARD_004.yml  CARD_005.yml
.dams/fortress/work_cards/: CARD_001_tdd_foundation.yml  (+54 more)
.eggs/: RSB_REFERENCE_GUIDE.egg  SDLC_ANALYSIS.egg  egg.001.lucas-cursor-verification.txt  egg.1.addressing-architecture-breakdown.txt  egg.1.dependency-hub-analysis.txt  egg.1.horus-claims-verification.txt  egg.1.krex-analysis-validation.txt  egg.1.prontodb-complete-analysis.txt  egg.1.structure-refactor-analysis.txt  egg.1.teddy-card-analysis.txt  egg.1.xstream-integration-review.txt  egg.101.pipe-xstream-revolutionary-integration.txt  egg.102.rsb-framework-essential-guide.txt  egg.12.comprehensive-documentation-index.txt  egg.2.addressing-pattern-conflict-resolution.txt  egg.2.migration-action-plan.txt  egg.2.pronto-project-analysis.txt  egg.2.requirements-constraints.txt  egg.3.meta-namespace-implementation.txt  egg.3.milestones-current-status.txt  egg.3.revised-migration-plan.txt  egg.4.crud-infrastructure-comprehensive-analysis.txt  egg.5.success-criteria-testing-approach.txt
.eggs/archive/: egg.1.sandbox-markdown-processing.txt
.krex/: defect_analysis_2025-09-11.md
.rebel/: HUNT_SUMMARY_CURSOR_VIOLATIONS.md  README.md  TERRITORIAL_COMPLIANCE_REPORT_20250909.md  YAP_BROKEN_LIFECYCLE_20250908.md  YAP_FINAL_VERIFICATION_20250907.md  YAP_FUNCTION_ORDINALITY_20250908.md  YAP_FUNCTION_ORDINALITY_20250909.md  YAP_FUNCTION_ORDINALITY_VIOLATIONS_20250909.md  YAP_MANUAL_STD_USAGE_20250909.md  YAP_MISSING_RSB_MACROS_20250909.md  YAP_MISSING_RSB_PRELUDE_20250909.md  YAP_PROCESSING_LOG.md  YAP_VALIDATION_PATTERNS_20250908.md  YAP_complex_types_violation_20250907.md  YAP_integration_tests_std_usage_20250907.md
.rebel/archive/: AMENDMENT_A_FINAL_COMPLIANCE_20250907.md  COMPLIANCE_SUMMARY_20250907.md  YAP_COMPLIANCE_PATROL_20250906_222315.md  YAP_amendment_a_correction_20250907.md  YAP_amendment_a_redundant_imports_20250907.md  YAP_missing_rsb_imports_20250907.md  YAP_utils_missing_rsb_import_20250907.md
.session/: SESSION_001.md  SESSION_63.md  SESSION_71.md
.uat/: FEATHER_CERTIFIED_v0.4.0_BETA.md  FEATHER_CERTIFIED_v0.5.0_LEVEL2.md  FEATHER_CERTIFIED_v0.5.0_LEVEL3.md  FEATHER_CERTIFIED_v0.6.0_LEVEL1.md  FEATHER_PARTIAL_PROGRESS_v0.4.0.md  FEATHER_USABILITY_02.md  META_NAMESPACE_UAT_CHECKLIST.md
docs/: CURSOR_CONCEPT.md  PIPE_CACHE_DESIGN.md  ROADMAP_MVP.md  ROADMAP_XSTREAM_V7.md  RSB_USAGE.md  SESSION_66_FINAL_NOTES.md  TASKS_MVP.md  logo.txt
docs/archive/: ABRIDGED-SDLC.md  ACTUAL_SYNTAX.md  RSB_FOUNDATION_ANALYSIS.md  SEMANTIC_LAYER_EXAMPLE.md  dev_tdd_protocol.txt
docs/archive.1/: DEVELOPMENT_PROCESS_GUIDE.md  README.md  ROADMAP.md
docs/eggs-01/: egg.1.backup-architecture.txt  egg.1.lucas-sp3-verification.txt  egg.1.phase1-verification.txt  egg.1.prontodb-verification-report.txt  egg.1.sp4-backup-verification.txt  egg.1.xdg-path-implementation.txt  egg.2.help-systems-verification.txt  egg.999.prontodb-final-verification.txt
docs/intelligence/: README.md
docs/procs/: CONTINUE.md  DONE.txt  PROCESS.txt  QUICK_REF.txt  ROADMAP.md  ROADMAP.txt  SPRINT.txt  TASKS.md  TASKS.txt
docs/ref/: CRUD_SPEC.md  HOWTO_HUB.md  RSB_UPDATES.md
docs/sdlc_ref/: development-lifecycle-guide.md  phase-2a-tdd-development.md  phase-5-certification-guide.md
docs/specs/: TEST-SPEC-MVP.md
docs/status/: BLOCKERS.md  MVP_NEXT.md  PRD.md  ROADMAP.md  SESSION.md  old.ROADMAP.txt  uat_plan.md
sandbox/: BASHFX-v3.md  BASHFX-v3.md.renumbered  bashfx-v3.0-reassembled.md  divide-beast  extract-sections  kb-assemble  kb-section  lore  renumber-children  show-pups  validate-children
sandbox/bashfx/: .ix-meta.json
scripts/: auto_continue_xstream.sh  build.sh  setup_xstream_cron.sh
specs/: PRD_old.md  ROADMAP_draft.md  TDD_PROCESS.md  TEST-SPEC.md  test-tdd.rs
specs/sdlc_ref/: phase-1-planning-guide.md  phase-2-development-guide.md  phase-2b-fix-refactor-guide.md
src/: addressing.rs  api.rs  backup.rs  common.rs  cursor.rs  cursor_cache.rs  dispatcher.rs  lib.rs  main.old.rs  main.rs  pipe_cache.rs  storage.rs  store.rs  stream.rs  streaming.rs  validation.rs  xdg.rs
src/___backup/: address_resolver.rs  addressing.rs  addressing4.rs  api.rs  dispatcher_meta.patch  main_clean.rs  main_test_harness.rs  storage_hierarchical.rs  storage_meta.rs  streaming.rs  test_meta.rs  validation.rs  xdg.rs
src/cmd/: backup.rs  uninstall.rs
src/commands/: backup.rs  mod.rs
src/core/: dispatch.rs  options.rs
src/lib/: mod.rs
src/prontodb/: config.rs  core.rs  handlers.rs  mod.rs  utils.rs
src/src_ref/: test.rs
tests/: cache_cursor_isolation.rs  config_tests.rs  hub_dependencies.rs  integration.rs  krex_fix_validation.rs  meta_debug.rs  meta_debug_deep.rs  meta_namespace_integration.rs  mvp_kv.rs  pipe_cache_integration.rs  rsb_cli.rs  rsb_integration.rs  rsb_sanity.rs  sanity_tests.rs  sqlite_adapter_smoke.rs  sqlite_table_smoke.rs  tdd_workflow.rs  uat_validation.rs  user_isolation_integration.rs
tests/backup/: cursor_cache_integration.rs  cursor_database_integration.rs  krex_isolation_debug.rs  meta_debug.rs  multi_database.rs  sanity_tests.rs  uat_validation.rs
tests/sanity/: rsb_colors.rs  rsb_fs.rs  rsb_global.rs  rsb_options.rs  run.sh
(+82 files in other folders)
