[package]
name = "prontodb"
version = "0.7.0"
edition = "2021"
description = "ProntoDB — namespaced, file-based KV on SQLite with RSB-style CLI"
repository = "https://github.com/oodx/prontodb"
license = "AGPL-3.0"            
license-file = "LICENSE"  
publish = false  

[dependencies]
anyhow = "1"
atty = "0.2"                                       # TTY detection for pipe input
directories = "6"
md5 = "0.8"                                        # Content hashing for cache keys
rusqlite = { version = "0.37" }                    # default: link to system SQLite
tempfile = "3"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


#rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }  
rsb     = { path = "../rsb2", features = ["visuals", "stdopts"] } #local versions with visual + standard options
xstream = { path = "../xstream", optional = true } # XStream integration



# Optional value-layer features
zstd = { version = "0.13", optional = true }       # compression-zstd
aes-gcm = { version = "0.10", features = ["aes"], optional = true }  # encryption
pbkdf2 = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["json", "sqlite-bundled"]               # Include bundled SQLite for easy builds  
json = ["dep:serde", "dep:serde_json"]
streaming = ["dep:xstream"]                        # XStream integration for advanced streaming
pipe-cache = []                                    # Revolutionary pipe cache with zero data loss
stdopts = []                                       # Standard options mapping (-d → opt_debug, etc.)

# Use system SQLite by default. If you want portability, build with:
#   cargo build --features sqlite-bundled
sqlite-bundled = ["rusqlite/bundled"]

compression-zstd = ["dep:zstd"]
encryption-aes   = ["dep:aes-gcm", "dep:pbkdf2", "dep:sha2" ] #rand provided by rsb::dep::rand
